...
    <!-- Sign up page titles-->
    <string name="email_title">Email Address</string>
    <string name="password_title">Password</string>
    <string name="password_conf_title">Confirm Password</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="password_old_title">Current Password</string>
    <string name="password_new_title">New Password</string>
    <string name="password_conf_new_title">Confirm New Password</string>
    <string name="password_requirements_label">At least 8 characters long, 1 uppercase, 1 lowercase, 1 number, and 1 special character</string>

    <!-- Create Post strings -->
...
    <string name="application_logo">Application Logo</string>
    <string name="rightmesh_credit">RightMesh Credit</string>
    <string name="enter">Enter</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>

    <!-- Error Messages -->
    <string name="failed_to_load_title">Failed to load title</string>
    <string name="failed_to_load_content">Failed to load content</string>
    <string name="error_initializing_the_library">Error initializing the library</string>

...
    <string name="author_name_place_holder">John Doe</string>
    <string name="preview_place_holder">Message Content</string>
    <string name="dash_color_description">background colour styling</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="email_placeholder">placeholderemail@placeholder.com</string>
    <string name="name_placeholder">PLACEHOLDER NAME</string>
    <string name="discover_forums">Discover Forums</string>
    <string name="your_forums">Your Forums</string>
    <string name="view">View</string>
    <string name="full_name_placeholder">%s %s</string>
    <string name="remember_me_label">Remember username and password</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment_hint">Add a comment about the post.</string>
    <string name="post">Post</string>
    <string name="anonymous">Anonymous</string>
    <string name="account_settings">Account Settings</string>
    <string name="full_name">Full Name</string>
    <string name="edit_button_content_description">Edit Button</string>
    <string name="new_email_label">New Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_email_message">Please enter your new email</string>
...
