<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_title"
                android:textColor="?themeAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/title_text_input"
                app:layout_constraintStart_toStartOf="@+id/title_text_input"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="?themeAccent"
                android:text="@string/tags_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/tags_input"
                app:layout_constraintStart_toStartOf="@+id/tags_input"/>

            <EditText
                android:id="@+id/post_message"
                android:layout_width="0dp"
                android:layout_height="258dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/message_hint"
                android:inputType="textMultiLine"
                android:textColorHint="?themeAccentFade"
                android:textColor="?themeAccent"
                app:layout_constraintBottom_toTopOf="@+id/cancel_button"
                app:layout_constraintEnd_toEndOf="@+id/title_text_input"
                app:layout_constraintStart_toStartOf="@+id/title_text_input"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_text_input"

                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/title_hint"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="?themeAccentFade">

                <android.support.design.widget.TextInputEditText
                    android:backgroundTint="?themePrimary"
                    android:textColor="?themeAccent"
                    android:id="@+id/title_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textAutoCorrect|textAutoComplete"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/tags_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toTopOf="@+id/anonymous"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@android:string/cancel"
                android:textColor="?themeAccent"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/save"
                app:layout_constraintEnd_toStartOf="@+id/save"
                app:layout_constraintTop_toTopOf="@+id/save"
                app:layout_constraintVertical_bias="1.0"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="32dp"
                android:text="@string/post"
                app:backgroundTint="?themePrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <CheckBox
                android:id="@+id/anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/anonymous"
                android:buttonTint="?themeAccent"
                android:textColor="?themeAccent"
                app:layout_constraintBottom_toTopOf="@+id/post_message"
                app:layout_constraintStart_toStartOf="@+id/post_message"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>